postgresql-common (200) UNRELEASED; urgency=medium

  * pg_upgradecluster, t/052_upgrade_encodings.t: pg_dumpall 11 retains the
    database encoding, so switching encodings via dump-restore does not work
    anymore.
  * pg_upgradecluster: Deprecate 'replacement_sort_tuples' in version 11.
  * pg_ctlcluster: Die early if logfile is not available. (Closes: #891234)
  * pg_ctlcluster: Document --skip-systemctl-redirect, and skip redirect if
    --foreground is requested.
  * pg_dropcluster: Delete tablespace directories. (Closes: #916449)
  * pg_dropcluster: Silence warning if data_directory is already gone.
    Spotted by Jean-Christophe Arnu, merci!
  * get_cluster_port: Fall back to 5432 if port is not defined in config.
    (Closes: #920248)
  * read_cluster_conf_file: Use cluster_data_directory instead of hardcoding
    /var/lib/postgresql.
  * postgresql@.service: Add After=network.target to ensure the server is
    stopped before networking goes down on shutdown. Thanks Elrond!
    (Closes: #910991)

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 20 Feb 2019 12:32:38 +0100

postgresql-common (199) unstable; urgency=medium

  [ Antti Salmela ]
  * pg_upgradecluster: Pass --jobs to pg_upgrade when using upgrade method.

  [ Christoph Berg ]
  * supported-versions: Drop support for 9.3 on apt.postgresql.org.

 -- Christoph Berg <christoph.berg@credativ.de>  Mon, 28 Jan 2019 16:27:27 +0100

postgresql-common (198) unstable; urgency=medium

  [ Christoph Berg ]
  * Add gitlab-ci.yml file to be included in all PostgreSQL team packages.
  * testsuite: Stop postgresql@* explicitly. (Workaround for #759725)

  [ Michael Banck ]
  * pg_buildext: Add support for passing Makefile variables via the new -m
    option. (Closes: #915953)

 -- Christoph Berg <myon@debian.org>  Sun, 16 Dec 2018 11:55:10 +0100

postgresql-common (197) unstable; urgency=medium

  * dh_make_pgxs: Update Maintainer address and package URLs.